--- a/indexV3.html
+++ b/indexV3.html
@@ -17,7 +17,8 @@
 
     <meta name="description" content="Esse portifólio tem o intuíto de compartilhar meus projetos de programação como desenvolvedor júnior" >  <!-- ESSE METADADO FOI CRIADO PARA DEIXAR A DESCRIÇÃO ABAIXO DE LINK -->
 
-    <link rel="stylesheet" type="text/css" href="StyleV3.css"> <!-- FOI PRECISO CRIAR ESSE LINK PARA UNIR A PROGRAMAÇÃO HTML E O LAYOUT DA PÁGINA EM CSS -->
+   <!-- FOI <link rel="stylesheet" type="text/css" href="StyleV3.css">  PRECISO CRIAR ESSE LINK PARA UNIR A PROGRAMAÇÃO HTML E O LAYOUT DA PÁGINA EM CSS -->
+    <link href="https://camiloacarvalho.github.io/My-resume-v3/StyleV3.css" rel="stylesheet" /> 
 
 </head>
 
