--- a/indexV3.html
+++ b/indexV3.html
@@ -9,14 +9,16 @@
 
     <meta charset="UTF-8">  <!-- ESSE É O PRIMEIRO METADADO. É UMA FORMA DE INDICAR OS CHARACTER QUE VAMOS USAR. VAMOS DEIXAR DE FORMA PADRÃO "UTF-8"-->
 
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">  PARA A CRIAÇÃO DESTA LANDING PAGE, TERÍAMOS QUE APAGAR ESSE METADADO, MAS PARA NÃO PERDER ESSA INFORMAÇÃO, TORENI ELE UM COMENTÁRIO-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">  <!-- PARA A CRIAÇÃO DESTA LANDING PAGE, TERÍAMOS QUE APAGAR ESSE METADADO, MAS PARA NÃO PERDER ESSA INFORMAÇÃO, TORENI ELE UM COMENTÁRIO-->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- ESSE METADADO INDICA QUE VAMOS PODER ADAPTAR O NOSSO CÓGIDO A OUTROS DISPOSITIVOS, COMO CELULARES, POR EXEMPLO. MANTEVE O CÓDIGO -->
 
-    <title>Camilo Carvalho - Portifólio</title> <!-- É O TÍTULO DA MINHA PÁGINA, PORÉM NÃO É O TÍTULO QUE OS USÁRIOS IRÃO VER DENTRO DA PÁGINA. ESSE TÍTULO REFERE-SE AO TÍTULO QUE FICARÁ ESCRITO NA ABA DA JANELA DO NAVEGADOR-->
+    <title>Camilo Carvalho - Currículo </title> <!-- É O TÍTULO DA MINHA PÁGINA, PORÉM NÃO É O TÍTULO QUE OS USÁRIOS IRÃO VER DENTRO DA PÁGINA. ESSE TÍTULO REFERE-SE AO TÍTULO QUE FICARÁ ESCRITO NA ABA DA JANELA DO NAVEGADOR-->
 
-    <meta name="description" content="Esse portifólio tem o intuíto de compartilhar meus projetos de programação como desenvolvedor júnior" >  <!-- ESSE METADADO FOI CRIADO PARA DEIXAR A DESCRIÇÃO ABAIXO DE LINK -->
+    <meta name="description" content="Esse página tem o intuíto de compartilhar meu currículo e marcar o início de mudança carreira para desenvolvedor júnior" >  <!-- ESSE METADADO FOI CRIADO PARA DEIXAR A DESCRIÇÃO ABAIXO DE LINK -->
 
+    <link rel="stylesheet" type="text/css" href="https://camiloacarvalho.github.io/My-resume-v3/StyleV3.css"> 
+    
     <link rel="stylesheet" type="text/css" href="StyleV3.css"> <!-- FOI PRECISO CRIAR ESSE LINK PARA UNIR A PROGRAMAÇÃO HTML E O LAYOUT DA PÁGINA EM CSS -->
 
 </head>
